[package]
name = "libmine"
version = "0.1.0"
authors = ["Johannes Löthberg <johannes@kyriasis.com>"]

[dependencies]
rand = "^0.3"
error-chain = "^0.11.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
sequence_trie = { git = "https://github.com/kyrias/rust_sequence_trie", branch = "serde", features = ["serde"] }
